# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"
members = [
    "asm", "asm_macro",
]

[workspace.package]
version = "0.0.6" # JAVA_ASM_VERSION
authors = ["zsqw123"]
edition = "2021"
license = "Apache-2.0"
description = "Java bytecode reader & writer in rust"
documentation = "https://github.com/zsqw123/rust-java-asm"
repository = "https://github.com/zsqw123/rust-java-asm"
homepage = "https://crates.io/crates/java_asm"
readme = "README.md"

[workspace.dependencies]
java_asm_macro = { path = "asm_macro", version = "0.0.6" } # JAVA_ASM_VERSION
