# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"
members = [
    "asm", "asm_macro", "asm_server",
    "asm_egui",
    # iced seems quite not mature to use and font fallback didn't works well.
    # "asm_iced",
]

[workspace.package]
version = "0.1.1" # JAVA_ASM_VERSION
authors = ["zsqw123"]
edition = "2021"
license = "Apache-2.0"
description = "Java bytecode reader & writer in rust"
documentation = "https://github.com/zsqw123/rust-java-asm"
repository = "https://github.com/zsqw123/rust-java-asm"
homepage = "https://crates.io/crates/java_asm"
readme = "README.md"

[workspace.dependencies]
java_asm_macro = { path = "asm_macro", version = "0.1.1" } # JAVA_ASM_VERSION
java_asm = { path = "asm", version = "0.1.1" } # JAVA_ASM_VERSION
java_asm_server = { path = "asm_server", version = "0.1.1" } # JAVA_ASM_VERSION

image = "0.25.6"
trie-rs = "0.4.2"
enum_dispatch = "0.3.13"
zip = "2.2.0"

egui = { version = "0.31.1", features = ["persistence"] }
eframe = { version = "0.31.1", features = ["persistence"] }
egui_extras = "0.31.1"
egui_flex = "0.3.0"

egui_autocomplete = { version = "10.2.0", features = ["serde"] }

tokio = { version = "1.44.2", features = ["full"] }
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }

#iced = "0.13.1"
#cosmic-text = "0.12.1"

fontdb = "0.23.0"
rfd = "0.15.0"
open = "5.3.2"

log = { version = "0.4", features = ["std"] }
