[package]
name = "java_asm"
version.workspace =  true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
java_asm_macro = { workspace = true }

[lib]
doctest = false
