[package]
name = "java_asm_egui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
java_asm = { workspace = true }
java_asm_server = { workspace = true }
log = { workspace = true }

image = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
egui_extras = { workspace = true }
egui_flex = { workspace = true }

fontdb = { workspace = true }
bit-set = { workspace = true }

[profile.release]
strip = true
lto = true
