[package]
name = "java_asm_egui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
java_asm = { workspace = true }
java_asm_server = { workspace = true }
log = { workspace = true }

image = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
egui_extras = { workspace = true }
egui_flex = { workspace = true }
egui-notify = { workspace = true }

fontdb = { workspace = true }
bit-set = { workspace = true }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }
getrandom_v2 = { workspace = true, features = ["js"] }

