[package]
name = "java_asm_gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
java_asm_server = { workspace = true }
log = { workspace = true }

egui = { workspace = true }
eframe = { workspace = true }
egui_extras = { workspace = true }

fontdb = { workspace = true }
rfd = { workspace = true }
