[package]
name = "java_asm_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
java_asm = { workspace = true }
zip = { workspace = true }
log = { workspace = true }

fontdb = { workspace = true }
rfd = { workspace = true }

enum_dispatch = { workspace = true }

tokio = { workspace = true }
parking_lot = { workspace = true }
trie-rs = { workspace = true }
