[package]
name = "java_asm_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
java_asm = { workspace = true }
bit-set = { workspace = true }

nucleo-matcher = { workspace = true }
rand = { workspace = true }
zip = { workspace = true }
log = { workspace = true }

fontdb = { workspace = true }
rfd = { workspace = true }

enum_dispatch = { workspace = true }

parking_lot = { workspace = true }
futures = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
open = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { workspace = true }
wasm-bindgen-futures = { workspace = true }

